# koko.brain

./: .gitignore  .tool-versions  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.ts
.github/workflows/: cache-warmup.yml  ci.yml  privacy.yml  release.yml  security.yml  sync-wiki.yml
docs/: COMMITS.md  LIVE-PREVIEW.md  PATTERNS.md  TESTING.md
e2e/: playwright.config.ts
e2e/fixtures/: live-preview.ts  test-vault.ts
e2e/mocks/: tauri-core.ts  tauri-deep-link.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts  tauri-http.ts  tauri-opener.ts  tauri-window.ts  virtual-fs.ts
e2e/specs/: backlinks.spec.ts  command-palette.spec.ts  editor.spec.ts  file-explorer.spec.ts  file-operations.spec.ts  keyboard-shortcuts.spec.ts  outgoing-links.spec.ts  properties.spec.ts  quick-switcher.spec.ts  right-sidebar.spec.ts  search.spec.ts  settings.spec.ts  tab-pinning.spec.ts  tags.spec.ts  vault-picker.spec.ts  wikilink-navigation.spec.ts
e2e/types/: global.d.ts
help/documentation/: 01-getting-started.md  02-file-explorer.md  03-editor.md  04-markdown.md  05-wikilinks.md  11-canvas.md  (+18 more)
scripts/: e2e.sh  log-watcher.py  release.sh
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: crypto.rs  db.rs  debug.rs  files.rs  fonts.rs  history.rs  mod.rs  search.rs  search_index.rs  semantic.rs  sync.rs  terminal.rs  vault.rs
src-tauri/src/db/: fts_repo.rs  history_repo.rs  mod.rs  schema.rs  semantic_repo.rs
src-tauri/src/search/: fts_logic.rs  fuzzy.rs  mod.rs  text_search.rs
src-tauri/src/security/: biometric.rs  crypto.rs  keychain.rs  mod.rs
src-tauri/src/semantic/: chunker.rs  embedder.rs  filtering.rs  mod.rs  model.rs  types.rs
src-tauri/src/sync/: client.rs  conflict.rs  crypto.rs  discovery.rs  engine.rs  manifest.rs  mod.rs  noise_transport.rs  server.rs
src-tauri/src/utils/: fs.rs  logger.rs
src-tauri/tests/: crypto_test.rs  db_history_repo_test.rs  db_schema_test.rs  db_semantic_repo_test.rs  db_test.rs  history_test.rs  search_fts_logic_test.rs  search_fts_test.rs  search_fuzzy_test.rs  search_text_test.rs  semantic_commands_test.rs  semantic_filtering_test.rs  semantic_test.rs  sync_conflict_test.rs  sync_crypto_test.rs  sync_engine_test.rs  sync_integration_test.rs  sync_manifest_test.rs  sync_noise_test.rs  sync_server_test.rs  utils_fs_test.rs
src-tauri/tests/commands/: files_test.rs  fonts_test.rs  mod.rs  search_test.rs  terminal_test.rs  vault_test.rs
(+798 files in other folders)
