[package]
name = "kokobrain"
version = "1.0.4-alpha"
description = "Markdown second-brain app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kokobrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }

# Debug / metrics
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

# Shared infrastructure
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

# File History
similar = "2.7"
percent-encoding = "2"

# Encrypted Notes
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"
zeroize = "1"

# Semantic Search
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray", "half"] }
half = "2.7"
ndarray = "0.17"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
tauri-plugin-http = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-security = "0.3"
security-framework = "3"
objc2-local-authentication = "0.3"
block2 = "0.6"

[profile.dev]
# More parallel codegen units = faster compilation (trades runtime perf for build speed)
codegen-units = 256
# Faster incremental linking on macOS
split-debuginfo = "unpacked"

[profile.release]
# Thin LTO: good optimization with much faster link times than fat LTO
lto = "thin"
# Strip symbols for smaller binaries
strip = true
# Single codegen unit for best optimization in release
codegen-units = 1

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

